--- a/index.html
+++ b/index.html
@@ -5,6 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MSI Career Development Resource Hub</title>
 </head>
+   <!--
+    MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+    MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+    MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+    MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+    MMMMMMMM             MMMMMMMMMMMMMMMMM             MMMMMMMMM
+    MMMMMMMM              MMMMMMMMMMMMMMM              MMMMMMMMM
+    MMMMMMMM                MMMMMMMMMMM                MMMMMMMMM
+    MMMMMMMM                 MMMMMMMMM                 MMMMMMMMM
+    MMMMMMMM                  MMMMMMM                  MMMMMMMMM
+    MMMMMMMMMMMM               MMMMM                MMMMMMMMMMMM
+    MMMMMMMMMMMM                MMM                 MMMMMMMMMMMM
+    MMMMMMMMMMMM                 V                  MMMMMMMMMMMM
+    MMMMMMMMMMMM                                    MMMMMMMMMMMM
+    MMMMMMMMMMMM         ^               ^          MMMMMMMMMMMM
+    MMMMMMMMMMMM         MM             MM          MMMMMMMMMMMM
+    MMMMMMMMMMMM         MMMM         MMMM          MMMMMMMMMMMM
+    MMMMMMMMMMMM         MMMMM       MMMMM          MMMMMMMMMMMM
+    MMMMMMMMMMMM         MMMMMM     MMMMMM          MMMMMMMMMMMM
+    MMMMMMMM                MMMM   MMMM                MMMMMMMMM
+    MMMMMMMM                MMMMMVMMMMM                MMMMMMMMM
+    MMMMMMMM                MMMMMMMMMMM                MMMMMMMMM
+    MMMMMMMM                MMMMMMMMMMM                MMMMMMMMM
+    MMMMMMMM                MMMMMMMMMMM                MMMMMMMMM
+    MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+    MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+    MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+    MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+    MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+    -->
+
 <body>
 
     <header>
@@ -45,7 +76,7 @@
         <section>
       <h2>Start Here</h2>
       <div>
-        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
+        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in Fall on the Diag.">
         <ul>
             <li><a href="resume.html">Resumes</a></li>
             <li><a>Networking & Connections</a></li>
@@ -55,16 +86,16 @@
        
 
       </div>
-      <aside>
+      <div>
         <h3>Most Popular Resources</h3>
         <ul>
           <li><a href="https://umsi.instructure.com/courses/12345/pages/resume-guide" target="_blank">UMSI Resume Guide</a></li>
           <li><a href="https://umsi.campusgroups.com/cdo/home/" target="_blank">Attend a Career Event</a></li>
           <li><a href="https://umsi.instructure.com/courses/12345/pages/networking-tips" target="_blank">Networking Tips</a></li>
           <li><a href="https://umsi.instructure.com/courses/12345/pages/interview-prep" target="_blank">Interview Preparation</a></li>
-          <li><a href="https://careerlink.umich.edu" target="_blank">Career Link: UMSI’s Exclusive Career Portal</a></li>
+          <li><a href="https://careerlink.umich.edu" target="_blank">Career Link: UMSI's Exclusive Career Portal</a></li>
         </ul>
-      </aside>
+      </div>
     </section>
     <section>
       <h2>Connect with the UMSI Career Development Office</h2>
