--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
 <body>
 
     <header>
+  <a href = "">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
@@ -17,18 +18,30 @@
                 <li><a href = "portfolio.html"> Portfolios</a></li>
             </ul>
         </nav>
-    <h1>Building Your Portfolio</h1>
+        <h1>Building Your Portfolio</h1>
 
     </header>
-    <main>
+<main>
     <section>
-        <h2>Making a Portfolio That Shows Off Your Best!</h2>
+        <h2>Making a Portfolio That Shows Off Your Best</h2>
         <p>
             Making a portfolio may seem daunting at first, but the UMSI CDO team is here to help take this important task and break it down into simple steps.
         </p>
+        <p>
+            Need feedback? You can always <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">meet with a CDO Career Coach</a> to review your portfolio.
+        </p>
     </section>
 
-    </main>
+    <section>
+        <h2>How to Build a Successful Portfolio: A Step-by-Step Guide</h2>
+        <ol>
+            <li><strong>Make a Copy of UMSI's Very Own <a href="https://docs.google.com/document/d/1xw46Cm9DzC2wVQFxr_Ct96  kbddhAhchzqUJpJJTSESc/edit?usp=sharing" target="_blank">Portfolio Checklist</a>: </strong> Use these guidelines to make starting your portfolio easiser.</li>
+            <li><strong>View Sample Portfolios Online:</strong> Using websites such as <a href="https://www.cofolios.com/" target="_blank">Cofolios.com</a> to view sample portfolios gives you inspiration on how to construct your portfolio.</li>
+            <li><strong>Select a Portfolio-Building Website to Begin:</strong> Many people choose to use a website-builder to make their portolio. Choose a builder that you like and then select a plan that works for your budget. Some common website builders include Squarespace, Webflow, Wordpress, and Adobe Portfolio (Free with Adobe account). You can also learn to code your own website!</li>
+            <li><strong>Visit the UMSI CDO Course on Canvas:</strong> All UMSI Undergraduate and Graduate students have access to a vital resource from the CDO on Canvas that includes links and resources for building the best portfolio.</li>
+    </ol>
+    </section>
+</main>
 
     <footer>
         <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
