--- a/resume.html
+++ b/resume.html
@@ -14,8 +14,8 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
-                <li><a>Networking & Connections</a></li>
-                <li><a>Page 4</a></li>
+                <li><a href = "networking.html"> Networking & Connections</a></li>
+                <li><a href = "portfolio.html"> Portfolios</a></li>
             </ul>
         </nav>
         <h1>Resume Support</h1>
@@ -26,7 +26,7 @@
   <section>
     <h2>Craft a Resume that Tells Your Story</h2>
     <p>
-      Your resume is often your first impression—an opportunity to highlight your unique strengths, skills, and experiences to potential employers. Whether you’re starting from scratch or looking to polish an existing resume, these resources are here to help you every step of the way.
+      Your resume is often your first impression—an opportunity to highlight your unique strengths, skills, and experiences to potential employers. Whether you're starting from scratch or looking to polish an existing resume, these resources are here to help you every step of the way.
     </p>
     <p>
       UMSI students are in high demand, and a clear, well-organized resume will help you stand out among applicants. On this page, you'll find practical tips, templates, and guides—all tailored to the needs of School of Information students and aligned with employer expectations.
