--- a/networking.html
+++ b/networking.html
@@ -8,6 +8,7 @@
 <body>
 
     <header>
+  <a href = "">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
