--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
       <h2>Start Here</h2>
       <div>
         <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in Fall on the Diag.">
-        <ul>
+        <!--<ul>
             <li><a href="resume.html">Resumes</a></li>
             <li><a>Networking & Connections</a></li>
             <li><a>Career Exploration</a></li>
             <li><a>Talk to a Career Coach</a></li>
-        </ul>
+        </ul> commenting this out for now - will add proper links later!-->
        
 
       </div>
