--- a/networking.html
+++ b/networking.html
@@ -25,9 +25,28 @@
     <section>
         <h2>Making Connections Made EASY!</h2>
         <p>
-            Wanna get that dream job at the perfect medium-sized company with good work-life balance, working environment, and plenty of PTO? (PLEASE GIVE IT TO ME) 
+            Building meaningful connections is key to exploring career opportunities, learning from professionals, and advancing your goals to finally land that dream job. The UMSI CDO provides a variety of resources to help you connect with alumni, industry experts, and peers. Whether you’re looking for mentorship, informational interviews, or professional networking events, we’re here to help you get started!
         </p>
     </section>
+    
+        <img src="images/UMSI_PreferredAdmitCelebration_012425_01 (1).jpg" alt="A student receives a handout from a UMSI Student Ambassador.">
+
+    <section>
+        <h2>Resources</h2>
+            <ol>
+      <li><strong>Career Coaching & Advising:</strong> Schedule a one-on-one session with a CDO career coach to develop a networking strategy tailored to your goals. They can assist you in identifying relevant industry contacts, crafting outreach emails and LinkedIn messages, and practicing networking conversations.</li>
+      <li><strong>UMSI Alumni Network:</strong> Leverage the UMSI alumni community to connect with alumni working in your field of interest, learn from their career paths and experiences, and request informational interviews to learn more!</li>
+      <li><strong>Networking Events & Workshops:</strong> Attend events hosted by the CDO and UMSI student organizations, including industry panels and speaker series career fairs and recruitment events, and professional development workshops.</li>
+      <li><strong>Online Platforms & Tools:</strong>
+        <ul>LinkedIn: Create a strong profile, join UMSI groups, and connect with alumni and professionals.</ul>
+        <ul>Handshake: Access job postings, events, and employer information specific to UMSI students.</ul>
+        <ul>Mentorship Programs: Participate in CDO-supported mentorship programs to receive guidance from experienced professionals.</ul></li>
+      <li><strong>Peer Connections:</strong> Lastly, your classmates are valuable networking resources. Join student groups, collaborate on projects, and attend social events to build lasting connections beyond the classroom.</li>
+    </ol>
+        <p>Tip: Networking is a skill developed over time. Approach conversations with curiosity, offer assistance when possible, and maintain consistent communication with your contacts.</p>
+    </section>
+        <!-- Content taken & modified from ChatGPT with the prompt, "if i were designing a website for networking help from the umsi cdo, write me some intro content and resources for a networking and connections page".
+        OpenAI. (2025, September 7). ChatGPT [Large language model]. -->
     </main>
 
     <footer>
