--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
             Need feedback? You can always <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">meet with a CDO Career Coach</a> to review your portfolio.
         </p>
     </section>
-    <img src="images/UMSI_ChloePreble_06 (5).jpg" alt="A student uses a VR headset.">
+    <img src="images/UMSI_ChloePreble_06.jpg" alt="A student uses a VR headset.">
     <section>
         <h2>How to Build a Successful Portfolio: A Step-by-Step Guide</h2>
         <ol>
