--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
       Need feedback? You can always <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">meet with a CDO Career Coach</a> to review your materials.
     </p>
   </section>
-    <img src="images/UMSI_04182024_EXPO_04 (2).jpg" alt="A student points at a prototype on a trifold at the UMSI EXPO.">
+    <img src="images/UMSI_04182024_EXPO_04.jpg" alt="A student points at a prototype on a trifold at the UMSI EXPO.">
   <section>
     <h2>Resume Writing Made Easy: Steps to Success</h2>
     <ol>
