--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
     <section>
         <h2>How to Build a Successful Portfolio: A Step-by-Step Guide</h2>
         <ol>
-            <li><strong>Make a Copy of UMSI's Very Own <a href="https://docs.google.com/document/d/1xw46Cm9DzC2wVQFxr_Ct96  kbddhAhchzqUJpJJTSESc/edit?usp=sharing" target="_blank">Portfolio Checklist</a>: </strong> Use these guidelines to make starting your portfolio easiser.</li>
+            <li><strong>Make a Copy of UMSI's Very Own <a href="https://docs.google.com/document/d/1xw46Cm9DzC2wVQFxr_Ct96kbddhAhchzqUJpJJTSESc/edit?usp=sharing" target="_blank">Portfolio Checklist</a>: </strong> Use these guidelines to make starting your portfolio easiser.</li>
             <li><strong>View Sample Portfolios Online:</strong> Using websites such as <a href="https://www.cofolios.com/" target="_blank">Cofolios.com</a> to view sample portfolios gives you inspiration on how to construct your portfolio.</li>
             <li><strong>Select a Portfolio-Building Website to Begin:</strong> Many people choose to use a website-builder to make their portolio. Choose a builder that you like and then select a plan that works for your budget. Some common website builders include Squarespace, Webflow, Wordpress, and Adobe Portfolio (Free with Adobe account). You can also learn to code your own website!</li>
             <li><strong>Visit the UMSI CDO Course on Canvas:</strong> All UMSI Undergraduate and Graduate students have access to a vital resource from the CDO on Canvas that includes links and resources for building the best portfolio.</li>
