--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolios</title>
-</head>
-<body>
+  <head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Portfolios</title>
+		<meta name="description" content="The portfolio page for the UMSI Career Development Resource Hub."/>
+		<link rel="stylesheet" href="css/html5reset.css"/>
+		<link rel="stylesheet" href="css/style.css"/>
+  </head>
+	
+  <body>
 
     <header>
-  <a href = "">Skip to Main Content</a>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+  	<a href = "">Skip to Main Content</a>
+      <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
