--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resumes</title>
+    <meta name="description" content="The resumes page for the UMSI Career Development Resource Hub."/>
+    <link rel="stylesheet" href="css/html5reset.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
-<body>
 
+<body>
     <header>
   <a href = "">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
