--- a/networking.html
+++ b/networking.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Networking & Connections</title>
+    <meta name="description" content="The networking and connections page for the UMSI Career Development Resource Hub."/>
+    <link rel="stylesheet" href="css/html5reset.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
