--- a/networking.html
+++ b/networking.html
@@ -8,23 +8,22 @@
     <link rel="stylesheet" href="css/html5reset.css"/>
     <link rel="stylesheet" href="css/style.css"/>
 </head>
-<body>
-
-    <header>
-  <a href = "">Skip to Main Content</a>
+    <body>
+        <div class="skip"><a href="#main">Skip to Main Content</a></div>
+        <header>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+        <h1>Expanding Your Network</h1>
+        </header>
         <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "networking.html"> Networking & Connections</a></li>
-                <li><a href = "portfolio.html"> Portfolios</a></li>
-            </ul>
+        <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "resume.html">Resumes</a></li>
+            <li><a href = "networking.html"> Networking & Connections</a></li>
+            <li><a href = "portfolio.html"> Portfolios</a></li>
+        </ul>
         </nav>
-    <h1>Networking & Making Connections</h1>
-
-    </header>
-    <main>
+    
+    <main id="main">
     <section>
         <h2>Making Connections Made EASY!</h2>
         <p>
