--- a/portfolio.html
+++ b/portfolio.html
@@ -8,24 +8,22 @@
 		<link rel="stylesheet" href="css/html5reset.css"/>
 		<link rel="stylesheet" href="css/style.css"/>
   </head>
-	
-  <body>
-
-    <header>
-  	<a href = "">Skip to Main Content</a>
-      <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "networking.html"> Networking & Connections</a></li>
-                <li><a href = "portfolio.html"> Portfolios</a></li>
-            </ul>
-        </nav>
+    <body>
+        <div class="skip"><a href="#main">Skip to Main Content</a></div>
+        <header>
+        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <h1>Building Your Portfolio</h1>
-
-    </header>
-<main>
+        </header>
+        <nav>
+        <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "resume.html">Resumes</a></li>
+            <li><a href = "networking.html"> Networking & Connections</a></li>
+            <li><a href = "portfolio.html"> Portfolios</a></li>
+        </ul>
+        </nav>
+    
+    <main id="main">
     <section>
         <h2>Making a Portfolio That Shows Off Your Best</h2>
         <p>
