--- a/resume.html
+++ b/resume.html
@@ -8,24 +8,22 @@
     <link rel="stylesheet" href="css/html5reset.css"/>
     <link rel="stylesheet" href="css/style.css"/>
 </head>
-
-<body>
-    <header>
-  <a href = "">Skip to Main Content</a>
+    <body>
+        <div class="skip"><a href="#main">Skip to Main Content</a></div>
+        <header>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+        <h1>Making Your Resume</h1>
+        </header>
         <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "networking.html"> Networking & Connections</a></li>
-                <li><a href = "portfolio.html"> Portfolios</a></li>
-            </ul>
+        <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "resume.html">Resumes</a></li>
+            <li><a href = "networking.html"> Networking & Connections</a></li>
+            <li><a href = "portfolio.html"> Portfolios</a></li>
+        </ul>
         </nav>
-        <h1>Resume Support</h1>
-
-    </header>
-<main>
-  
+    
+    <main id="main">
   <section>
     <h2>Craft a Resume that Tells Your Story</h2>
     <p>
