--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
       <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-      <h1>Welcome to the UMSI Career Development Resource Hub</h1>
+      <h1>WELCOME TO THE UMSI CAREER DEVELOPMENT RESOURCE HUB</h1>
     </header>
     <nav>
       <ul>
@@ -55,18 +55,19 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
     </nav>
     
     <main id="main">
+    <h2>Your Central Hub for Career Success at UMSI</h2>
     <section>
-      <h2>Your Central Hub for Career Success at UMSI</h2>
       <p>
         Ready to take the next step toward your future career? The UMSI Career Development Resource Hub is your one-stop shop for trusted guidance, practical tools, and the latest information to help you thrive as a student and job-seeker. Whether you are just starting your exploration or getting ready to launch your career, you will find everything you need, organized for you.
       </p>
-      <div class="vidcontainer">
-        <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      </div>
     </section>
 
+    <section class="vidcontainer">
+        <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+
+    <h3>Why Use This Resource?</h3>
     <section>
-      <h2>Why Use This Resource?</h2>
       <ul>
         <li><strong>Everything in One Place:</strong> Stop searching endlessly—quickly access the resources you need for resumes, interviews, networking, mentorship, and more.</li>
         <li><strong>Student-Focused Navigation:</strong> Browse by topic or question. Key areas are highlighted so you can get moving right away.</li>
@@ -76,8 +77,8 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
       </ul>
     </section>
 
+    <h2>Start Here</h2>
     <section>
-      <h2>Start Here</h2>
       <div>
         <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in Fall on the Diag.">
         <!--<ul>
@@ -87,9 +88,10 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
             <li><a>Talk to a Career Coach</a></li>
         </ul> commenting this out for now - will add proper links later!-->
       </div>
+    </section>
 
-      <div>
-        <h2>Most Popular Resources</h2>
+      <h3>Most Popular Resources</h3>
+    <section>
         <ul>
           <li><a href="https://umsi.instructure.com/courses/12345/pages/resume-guide" target="_blank">UMSI Resume Guide</a></li>
           <li><a href="https://umsi.campusgroups.com/cdo/home/" target="_blank">Attend a Career Event</a></li>
@@ -97,11 +99,10 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
           <li><a href="https://umsi.instructure.com/courses/12345/pages/interview-prep" target="_blank">Interview Preparation</a></li>
           <li><a href="https://careerlink.umich.edu" target="_blank">Career Link: UMSI's Exclusive Career Portal</a></li>
         </ul>
-      </div>
     </section>
-    
+
+      <h3>Connect with the UMSI Career Development Office</h3>
     <section>
-      <h2>Connect with the UMSI Career Development Office</h2>
       <p>
         The UMSI Career Development Office (CDO) offers personalized support through appointments, events, and resource guides. <a href="https://www.si.umich.edu/programs/career-development-office" target="_blank">Visit the CDO website</a> or <a href="https://umsi.umich.edu/about/locations" target="_blank">find us on campus</a> to learn more, schedule a coaching session, or just say hello.
       </p>
@@ -111,7 +112,11 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
         UMGPT. (2025). UMGPT ( GPT-4.1 August 25th version) [Large language model]. -->
     </main>
     <footer>
-      <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
+        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
+        <p>© Copyrights <span id="year"></span> by University of Michigan. All rights reserved.</p>
+        <script>
+        document.getElementById("year").innerHTML = new Date().getFullYear();
+        </script>
     </footer>
   </body>
 </html>
