--- a/networking.html
+++ b/networking.html
@@ -12,7 +12,7 @@
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <header>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <h1>Expanding Your Network</h1>
+        <h1>EXPANDING YOUR NETWORK</h1>
         </header>
         <nav>
         <ul>
@@ -24,8 +24,8 @@
         </nav>
     
     <main id="main">
+    <h2>Making Connections Made EASY!</h2>
     <section>
-        <h2>Making Connections Made EASY!</h2>
         <p>
             Building meaningful connections is key to exploring career opportunities, learning from professionals, and advancing your goals to finally land that dream job. The UMSI CDO provides a variety of resources to help you connect with alumni, industry experts, and peers. Whether you’re looking for mentorship, informational interviews, or professional networking events, we’re here to help you get started!
         </p>
@@ -33,8 +33,8 @@
 
         <img src="images/UMSI_PreferredAdmitCelebration_012425_01.jpg" alt="A student receives a handout from a UMSI Student Ambassador.">
 
+    <h2>Resources</h2>
     <section>
-        <h2>Resources</h2>
             <ol>
       <li><strong>Career Coaching & Advising:</strong> Schedule a one-on-one session with a CDO career coach to develop a networking strategy tailored to your goals. They can assist you in identifying relevant industry contacts, crafting outreach emails and LinkedIn messages, and practicing networking conversations.</li>
       <li><strong>UMSI Alumni Network:</strong> Leverage the UMSI alumni community to connect with alumni working in your field of interest, learn from their career paths and experiences, and request informational interviews to learn more!</li>
@@ -53,6 +53,10 @@
 
     <footer>
         <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
+        <p>© Copyrights <span id="year"></span> by University of Michigan. All rights reserved.</p>
+        <script>
+        document.getElementById("year").innerHTML = new Date().getFullYear();
+        </script>
     </footer>
 </body>
 </html>
