--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <header>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <h1>Building Your Portfolio</h1>
+        <h1>BUILDING YOUR PORTFOLIO</h1>
         </header>
         <nav>
         <ul>
@@ -24,8 +24,8 @@
         </nav>
     
     <main id="main">
+    <h2>Making a Portfolio That Shows Off Your Best</h2>
     <section>
-        <h2>Making a Portfolio That Shows Off Your Best</h2>
         <p>
             Making a portfolio may seem daunting at first, but the UMSI CDO team is here to help take this important task and break it down into simple steps.
         </p>
@@ -34,8 +34,9 @@
         </p>
     </section>
     <img src="images/UMSI_ChloePreble_06.jpg" alt="A student uses a VR headset.">
+
+    <h2>How to Build a Successful Portfolio: A Step-by-Step Guide</h2>
     <section>
-        <h2>How to Build a Successful Portfolio: A Step-by-Step Guide</h2>
         <ol>
             <li><strong>Make a Copy of UMSI's Very Own <a href="https://docs.google.com/document/d/1xw46Cm9DzC2wVQFxr_Ct96kbddhAhchzqUJpJJTSESc/edit?usp=sharing" target="_blank">Portfolio Checklist</a>: </strong> Use these guidelines to make starting your portfolio easiser.</li>
             <li><strong>View Sample Portfolios Online:</strong> Using websites such as <a href="https://www.cofolios.com/" target="_blank">Cofolios.com</a> to view sample portfolios gives you inspiration on how to construct your portfolio.</li>
@@ -47,6 +48,10 @@
 
     <footer>
         <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
+        <p>© Copyrights <span id="year"></span> by University of Michigan. All rights reserved.</p>
+        <script>
+        document.getElementById("year").innerHTML = new Date().getFullYear();
+        </script>
     </footer>
 </body>
 </html>
