--- a/404.html
+++ b/404.html
@@ -1,1 +1,48 @@
 
+<!--
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMM             MMMMMMMMMMMMMMMMM             MMMMMMMMM
+MMMMMMMM              MMMMMMMMMMMMMMM              MMMMMMMMM
+MMMMMMMM                MMMMMMMMMMM                MMMMMMMMM
+MMMMMMMM                 MMMMMMMMM                 MMMMMMMMM
+MMMMMMMM                  MMMMMMM                  MMMMMMMMM
+MMMMMMMMMMMM               MMMMM                MMMMMMMMMMMM
+MMMMMMMMMMMM                MMM                 MMMMMMMMMMMM
+MMMMMMMMMMMM                 V                  MMMMMMMMMMMM
+MMMMMMMMMMMM                                    MMMMMMMMMMMM
+MMMMMMMMMMMM         ^               ^          MMMMMMMMMMMM
+MMMMMMMMMMMM         MM             MM          MMMMMMMMMMMM
+MMMMMMMMMMMM         MMMM         MMMM          MMMMMMMMMMMM
+MMMMMMMMMMMM         MMMMM       MMMMM          MMMMMMMMMMMM
+MMMMMMMMMMMM         MMMMMM     MMMMMM          MMMMMMMMMMMM
+MMMMMMMM                MMMM   MMMM                MMMMMMMMM
+MMMMMMMM                MMMMMVMMMMM                MMMMMMMMM
+MMMMMMMM                MMMMMMMMMMM                MMMMMMMMM
+MMMMMMMM                MMMMMMMMMMM                MMMMMMMMM
+MMMMMMMM                MMMMMMMMMMM                MMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+-->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MSI Career Development Resource Hub</title>
+    <meta name="description" content="The landing page for the UMSI Career Development Resource Hub."/>
+    <link rel="stylesheet" href="css/html5reset.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
+  </head>
+  <body>
+    <h1> 4o4 page not found.</h1>
+    <form>
+      <input type="button" value="Go back home!" onclick="history.back()">
+    </form>
+
+  </body>
