--- a/404.html
+++ b/404.html
@@ -39,10 +39,11 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
     <link rel="stylesheet" href="css/html5reset.css"/>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
-  <body>
-    <h1> 4o4 page not found.</h1>
-    <form>
-      <input type="button" value="Go back home!" onclick="history.back()">
-    </form>
-
-  </body>
+  <main>
+    <body>
+      <h1> 4o4 page not found.</h1>
+      <form>
+        <input type="button" value="Go back home!" onclick="history.back()">
+      </form>
+    </body>
+  </main>
